Fixed the background images not showing up

--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap");
 
 * {
   margin: 0;
@@ -14,7 +13,7 @@
 }
 
 html {
-  font-family: 'Playfair+Display', sans-serif;
+  font-family: "Playfair+Display", sans-serif;
 }
 
 a {
@@ -65,10 +64,9 @@ li a {
   overflow: hidden;
 }
 
-
 .image-container {
   position: relative;
-  background-image: url(/images/pic.jpg);
+  background-image: url("images/pic.jpg");
   background-size: cover;
   background-position: center;
   height: 100%;
@@ -126,7 +124,7 @@ li a {
 }
 
 .resume-cta:hover {
-background-color: rgba(100, 100, 100, 0.4);
+  background-color: rgba(100, 100, 100, 0.4);
 }
 
 /* Project Section */
@@ -158,7 +156,7 @@ background-color: rgba(100, 100, 100, 0.4);
   position: relative;
   box-shadow: -15px 7px 30px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  background-image: url(/images/pic.jpg);
+  background-image: url("images/pic.jpg");
   background-size: cover;
   background-position: center;
 }
@@ -170,7 +168,7 @@ background-color: rgba(100, 100, 100, 0.4);
   position: relative;
   box-shadow: -15px 7px 30px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  background-image: url(/images/pic.jpg);
+  background-image: url("images/pic.jpg");
   background-size: cover;
   background-position: center;
 }
@@ -182,7 +180,7 @@ background-color: rgba(100, 100, 100, 0.4);
   position: relative;
   box-shadow: -15px 7px 30px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  background-image: url(/images/pic.jpg);
+  background-image: url("images/pic.jpg");
   background-size: cover;
   background-position: center;
 }
@@ -241,7 +239,7 @@ background-color: rgba(100, 100, 100, 0.4);
 .about-image {
   height: 450px;
   width: 400px;
-  background-image: url(/images/candid.jpg);
+  background-image: url("images/candid.jpg");
   background-position: center;
 }
 
@@ -251,4 +249,3 @@ background-color: rgba(100, 100, 100, 0.4);
   font-size: 1.5rem;
   margin-left: 100px;
 }
-
